# Hybrid-Knowledge-System

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.en.md  README.md  pyproject.toml  readme.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
config/: hks.env.example  hks.json.example  hks.yaml.example  routing_rules.yaml
docs/: PRD.md  configuration.md  main.md  obsidian.md
evals/: e2e_baseline.jsonl  e2e_query.jsonl  pageindex_enrich.jsonl  rerank.jsonl
mcp/: README.md  http.md  mcp.md
mcp/config/: stdio.mcp.json  streamable-http.mcp.json
mcp/examples/: http-graphify-build.json  http-query.json  http-source-list.json
mcp/tools/: hks-mcp-tools.json
skill/: README.md
skill/hks-knowledge-system/: README.md  SKILL.md  troubleshooting.md
specs/: ARCHIVE.md
specs/001-phase1-cli-mvp/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-ingest-office/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase2-graph-routing/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-phase3-image-ingest/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-phase3-lint-impl/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-mcp-api-adapter/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-multi-agent-support/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  speckit-flow.md  tasks.md
specs/008-llm-classification-extraction/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  speckit-flow.md  tasks.md
specs/009-llm-wiki-synthesis/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  speckit-flow.md  tasks.md
specs/010-graphify-pipeline/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  speckit-flow.md  tasks.md
specs/011-continuous-watch/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  speckit-flow.md  tasks.md
specs/012-source-catalog/: ARCHIVE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  speckit-flow.md  tasks.md
specs/013-pageindex-integration/: plan.md  spec.md
src/hks/: __init__.py  cli.py  errors.py
tests/: conftest.py
tests/contract/: test_catalog_adapter_contract.py  test_catalog_contract.py  test_constitution_gate.py  test_coordination_contract.py  test_coordination_mcp_contract.py  test_exit_codes.py  test_graph_runtime.py  test_graphify_adapter_contract.py  test_graphify_contract.py  test_http_api_contract.py  test_ingest_summary_detail_schema.py  test_json_schema.py  test_lint_contract.py  test_lint_stub.py  test_llm_adapter_contract.py  test_llm_contract.py  test_mcp_contract.py  test_mcp_ingest_lint_contract.py  test_mcp_query_contract.py  test_no_graph_in_runtime.py  test_no_graph_in_src.py  test_placeholder_prefix.py  test_query_phase1_contract_preserved.py  test_watch_adapter_contract.py  test_watch_contract.py  (+2 more)
(+346 files in other folders)
